homework/7.advanced-abstractions/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccount: prometheus
      terminationGracePeriodSeconds: 10
      containers:
        - name: prom-k8s
          image: prom/prometheus:v2.19.2
          ports:
          - containerPort: 9090
          imagePullPolicy: Always
          volumeMounts:
          - name: promdata
            mountPath: /prometheus
          - name: config
            mountPath: /etc/prometheus
      volumes:
      - name: config
        configMap:
          name: prom-configmap
      - name: promdata
        persistentVolumeClaim:
          claimName: promdata
  volumeClaimTemplates:
    - metadata:
        name: promdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: csi-ceph-hdd-gz1
